[package]
name = "app"
version = "1.0.0"
authors = ["The Teaclave Authors"]
build = "build.rs"

[lib]
name = "tantivy"
crate-type = ["staticlib"]

[dependencies]
sgx_types = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_urts = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
env_logger = "0.7.1"
lazy_static = "1.4.0"
base64 = "0.12.3"
serde = {version="1.0.115",features = ["derive"] }
serde_json = "1.0.57"

# =========================== delete after debug ===============================
rust-crypto = { git = "https://github.com/DaGenix/rust-crypto.git", branch = "master" }
# ==============================================================================
