[package]
name = "Helloworldsampleenclave"
version = "1.0.0"
authors = ["The Teaclave Authors"]

[lib]
name = "helloworldsampleenclave"
crate-type = ["staticlib"]

[features]
default = []

[dependencies]
tantivy =  { git = "https://github.com/lengyijun/tantivy",branch="sgx"}
lazy_static = {version="1.4.0",features = ["spin_no_std"] }
serde = { git = "https://github.com/mesalock-linux/serde-sgx", branch = "master", features = ["derive", "rc"] }
serde_json = { git = "https://github.com/mesalock-linux/serde-json-sgx", branch = "master" }
base64 = { git = "https://github.com/mesalock-linux/rust-base64-sgx", branch = "master" }
rust-crypto = { git = "https://github.com/mesalock-linux/rust-crypto-sgx", branch = "master" }
#rsa = { git = "https://github.com/sunriseos/RSA", branch = "nostd", default-features = false, features = ["alloc"]}
rsa = { path="../../../RSA", branch = "nostd", default-features = false, features = ["alloc"]}
#rand = { version = "0.8.3", default-features = false , features = ["getrandom","std_rng"] }
#rand_core = {version = "0.6.2", features = ["getrandom"]}
rand = { version = "0.7.0", default-features = false }
num-bigint = { version = "0.6", features = ["i128", "u64_digit", "prime", "zeroize"], default-features = false, package = "num-bigint-dig" }
spin = "0.4.9"

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_types = {version = "1.0", rev = "v1.1.3",git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tstd = { version = "1.0", rev = "v1.1.3",git = "https://github.com/apache/teaclave-sgx-sdk.git", features = ["backtrace"] }
sgx_trts = { version = "1.0", rev = "v1.1.3",git = "https://github.com/apache/teaclave-sgx-sdk.git" }

